[package]
name = "stackparam"
version = "0.1.0"
authors = ["Chad Retz <chad.retz@gmail.com>"]
build = "build-helper-class.rs"

[lib]
crate-type = ["dylib", "rlib"]

[dependencies]
jni-sys = "0.4.0"
log = "0.4.22"
env_logger = "0.11.3"

[dev-dependencies]
zip = { version = "2.1.5", default-features = false }

[build-dependencies]
log = "0.4.22"
env_logger = "0.11.3"
bindgen = "0.69.4"